static pages controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,9 @@
   </head>
 
   <body>
+  <%= link_to 'home',root_path %>
+  <%= link_to 'Dashboard',dashboard_path %>
+
     <%= yield %>
   </body>
 </html>
