--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
       <%= link_to 'Sign Up', new_user_registration_path %> |
       <%= link_to 'Login', new_user_session_path %>
       <% end %>
-
+      <%= flash[:notice] %>
     <%= yield %>
   </body>
 </html>
