--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -1,2 +1,3 @@
-<h1>Home#dashboard</h1>
-<p>Find me in app/views/home/dashboard.html.erb</p>
+
+<h1>Welcome to organizaztion</h1>
+<p>Organization: <%= @organization.name %></p>
