--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,16 +18,9 @@
   </head>
 
   <body>
+  <%= flash[:notice] %>
 
-
-      <% if user_signed_in? %>
-      <%= link_to 'Edit Profile', edit_user_registration_path %> |
-      <%= link_to 'Logout', destroy_user_session_path, data: { turbo_method: :delete } %>
-      <% else %>
-      <%= link_to 'Sign Up', new_user_registration_path %> |
-      <%= link_to 'Login', new_user_session_path %>
-      <% end %>
-      <%= flash[:notice] %>
+<%= render "home/navbar" %>
     <%= yield %>
   </body>
 </html>
