--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,12 +1,12 @@
 <% content_for :title, "Editing post" %>
 
-<h1>Editing post</h1>
+<h1 align="center">Editing post</h1>
 
 <%= render "form", post: @post %>
 
 <br>
 
-<div>
+<div align="center">
   <%= link_to "Show this post", @post %> |
   <%= link_to "Back to posts", posts_path %>
 </div>
