--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,49 @@
+<%= stylesheet_link_tag 'signup' %>
 
-<h2>Sign up</h2>
+<div class="container">
+  <div class="form-wrapper">
+    <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <div class="field">
+        <label for="email">
+          <i class="fas fa-envelope"></i>
+          <%= f.label :email %>
+        </label><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Enter your email" %>
+      </div>
+
+      <div class="field">
+        <label for="password">
+          <i class="fas fa-lock"></i>
+          <%= f.label :password %>
+        </label><br />
+        <%= f.password_field :password, autocomplete: "new-password", placeholder: "Enter your password" %>
+      </div>
+
+      <div class="field">
+        <label for="password_confirmation">
+          <i class="fas fa-lock"></i>
+          <%= f.label :password_confirmation %>
+        </label><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Confirm your password" %>
+      </div>
+
+      <div class="field">
+        <label for="organization_id">
+          <i class="fas fa-building"></i>
+          <%= f.label :organization_id, 'Organization' %>
+        </label><br/>
+        <%= f.collection_select :organization_id, Organization.all, :id, :name, prompt: 'Select an Organization' %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Sign up" %>
+      </div>
+    <% end %>
+
+    <div class="devise-links">
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-  <%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :organization_id, 'Organization' %><br/>
-    <%= f.collection_select :organization_id, Organization.all, :id, :name, prompt: 'Select an Organization' %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
+</div>
