--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -9,6 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
+      <li class="nav-item">
+      <%= link_to "Contact", home_contact_path, class: "nav-link" %>
+    </li>
+
         <% if user_signed_in? %>
           <li class="nav-item">
             <%= link_to 'Edit Account', edit_user_registration_path, class: 'nav-link' %>
