--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,12 +1,18 @@
-<div id="<%= dom_id post %>">
+
+<div class="post-container" >
   <p>
     <strong>Title:</strong>
     <%= post.title %>
+
   </p>
 
   <p>
-    <strong>Description:</strong>
+  <strong>Description:</strong>
     <%= post.description %>
   </p>
+ 
+  <p>
+  <%= link_to "Show this post", post %>
+</p>
 
 </div>
